--- a/pinyougou-parent/pingyougou-sellergoods-service/pom.xml
+++ b/pinyougou-parent/pingyougou-sellergoods-service/pom.xml
@@ -121,17 +121,27 @@
 
 	<build>
 		<plugins>
+			<!-- jetty插件 -->
 			<plugin>
-				<groupId>org.apache.tomcat.maven</groupId>
-				<artifactId>tomcat7-maven-plugin</artifactId>
-				<version>2.2</version>
+				<groupId>org.mortbay.jetty</groupId>
+				<artifactId>jetty-maven-plugin</artifactId>
+				<version>8.1.14.v20131031</version>
 				<configuration>
-					<!-- 指定端口 -->
-					<port>9001</port>
-					<!-- 请求路径 -->
-					<path>/</path>
+					<scanIntervalSeconds>10</scanIntervalSeconds>
+					<stopPort>9999</stopPort>
+					<webAppConfig>
+						<contextPath>/</contextPath>
+					</webAppConfig>
+					<connectors>
+						<connector
+							implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
+							<port>9001</port>
+							<maxIdleTime>60000</maxIdleTime>
+						</connector>
+					</connectors>
 				</configuration>
 			</plugin>
+
 		</plugins>
 	</build>
 </project>
