--- a/pinyougou-parent/pingyougou-common/pom.xml
+++ b/pinyougou-parent/pingyougou-common/pom.xml
@@ -18,6 +18,12 @@
 	</properties>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
