--- a/pinyougou-parent/pom.xml
+++ b/pinyougou-parent/pom.xml
@@ -29,6 +29,7 @@
 		<security.version>3.2.3.RELEASE</security.version>
 		<solrj.version>4.10.3</solrj.version>
 		<ik.version>2012_u6</ik.version>
+		<commons-lang3.version>3.3.2</commons-lang3.version>
 	</properties>
 
 	<dependencyManagement>
@@ -115,7 +116,7 @@
 				<groupId>javax.servlet</groupId>
 				<artifactId>servlet-api</artifactId>
 				<version>2.5</version>
-				<scope>provided</scope> 
+				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.github.pagehelper</groupId>
@@ -252,6 +253,13 @@
 				<artifactId>xml-apis</artifactId>
 				<version>1.4.01</version>
 			</dependency>
+
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-lang3</artifactId>
+				<version>${commons-lang3.version}</version>
+			</dependency>
+
 		</dependencies>
 
 	</dependencyManagement>
